2017-04-08  Eric Herman <eric@freesa.org>

	Add ehbi_exp(result, base, exponent)
	Add ehbi_set_binary_string, ehbi_to_binary_string functions
	Copy in sources from libehstr git@github.com:ericherman/libehstr.git
	replace hex_raw and decimal_raw with origin functions in ehstr


	* src/ehbigint.h: add set_binary_str, to_binary_str, exp()
	* src/ehbigint-str.c: add set_binary, to_binary; exp,
				replace raw with ehstr
	* src/ehstr.c: copy from libehstr/src
	* src/ehstr.h: copy from libehstr/src
	* src/ehbigint.c: code tidy
	* tests/test-exp.c: new test
	* tests/test-from-binstr-to-binstr-round-trip.c: new test
	* misc/pre-tidy.patch: respin
	* Makefile.am: use the new sources
	* .gitignore: test-from-binstr-to-binstr-round-trip, test-exp


2017-04-02  Eric Herman <eric@freesa.org>

	Add a ehbi_init for struct initialization
	Add ehbi_is_odd function
	Add a test-shift-right and fix bug in shifting
	Use the ehbi_init in tests
	enhance trace-ing
	sketch out a 'is-probably-prime' (Miller-Rabin)

	* src/ehbigint.h: add ehbi_init, ehbi_is_odd
	* src/ehbigint.c: add ehbi_init, minor TODOs, easier debug
	* src/ehbigint-log.h: more tracing options
	* src/ehbigint-str.c: use tracing, debug friendly++
	* src/ehbigint-priv.h: move internal/private headers here
	* src/ehbigint-priv.c: move internal/private functions here
	* tests/test-add.c: ehbi_init
	* tests/test-bytes-shift-left.c: ehbi_init
	* tests/test-bytes-shift-right.c: ehbi_init
	* tests/test-comp-exp-mod-with-gmp.c: ehbi_init
	* tests/test-comp-mul-with-gmp.c: ehbi_init
	* tests/test-compare.c: ehbi_init
	* tests/test-compare2.c: ehbi_init
	* tests/test-dec-corner-case.c: ehbi_init
	* tests/test-dec.c: ehbi_init
	* tests/test-div.c: ehbi_init
	* tests/test-equals.c: ehbi_init
	* tests/test-exp-mod.c: ehbi_init
	* tests/test-from-decimal-to-decimal-round-trip.c: ehbi_init
	* tests/test-from-hex-to-hex-round-trip.c: ehbi_init
	* tests/test-inc-l.c: ehbi_init
	* tests/test-inc.c: ehbi_init
	* tests/test-mul.c: ehbi_init